--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -68,9 +68,11 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
+        "Academy of Art University",
         "United States Military Academy",
         "Big Bend Community College",
         "Boise State University",
+        "California Polytechnic State University",
         "California State University, Fresno",
         "California State University - Long Beach",
         "California State University, Monterey Bay",
@@ -80,6 +82,7 @@
         "Colorado State University",
         "Corban University",
         "DePaul University",
+        "Dominican University of California",
         "Eastern Oregon University",
         "Eastern Washington University",
         "Evergreen State College",
@@ -89,6 +92,7 @@
         "Hamline University",
         "Idaho State University",
         "Lamar University",
+        "Lewis-Clark State College",
         "Lewis \u0026 Clark College",
         "Linfield University",
         "Loyola Marymount University",
@@ -108,10 +112,12 @@
         "St. Mary's College of California",
         "San Diego State University",
         "San Francisco State University",
+        "San Jose State University",
         "Seattle Pacific University",
         "Seattle University",
         "South Puget Sound Community College",
         "University of Montana",
+        "University of Montana - Western",
         "United States Air Force Academy",
         "University of California, Berkeley",
         "University of California, Davis",
