--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -71,12 +71,14 @@
         "Academy of Art University",
         "United States Military Academy",
         "Big Bend Community College",
+        "Biola University",
         "Boise State University",
         "California Polytechnic State University",
         "California State University, Fresno",
         "California State University - Long Beach",
         "California State University, Monterey Bay",
         "California State University, Sacramento",
+        "California State University, Stanislaus",
         "Colby College",
         "College of Southern Idaho",
         "Colorado State University",
@@ -99,6 +101,7 @@
         "Loyola University Chicago",
         "Montana State University, Bozeman",
         "North Carolina State University",
+        "North Central College",
         "North Idaho College",
         "Northwest Nazarene University",
         "Northwest University",
