--- a/config_chicagoCoaches.json
+++ b/config_chicagoCoaches.json
@@ -73,6 +73,7 @@
         "Louisiana State University",
         "Loyola Marymount University",
         "Michigan State University",
+        "Southeast Missouri State University",
         "Southern Methodist University",
         "Texas Woman's University",
         "University of California, Los Angeles",
@@ -80,6 +81,7 @@
         "University of Notre Dame",
         "Virginia Commonwealth University",
         "Wake Forest University",
+        "Wesleyan University (CT)",
         "#TBD",
         "#All"
     ],
