--- a/config_spokaneCoaches.json
+++ b/config_spokaneCoaches.json
@@ -122,6 +122,7 @@
         "University of Montana",
         "University of Montana - Western",
         "United States Air Force Academy",
+        "University of Arizona",
         "University of California, Berkeley",
         "University of California, Davis",
         "University of California, Los Angeles",
