--- a/config_chicagoCoaches.json
+++ b/config_chicagoCoaches.json
@@ -68,16 +68,23 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
+        "California State University, Fresno",
+        "Cornell University",
         "Fordham University",
         "Illinois College",
+        "Illinois State University",
         "Louisiana State University",
+        "Loras College",
         "Loyola Marymount University",
         "Michigan State University",
+        "Mississippi State University",
+        "Santa Clara University",
         "Southeast Missouri State University",
         "Southern Methodist University",
         "Texas Woman's University",
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
+        "University of North Dakota",
         "University of Notre Dame",
         "Virginia Commonwealth University",
         "Wake Forest University",
