--- a/config_chicagoCoaches.json
+++ b/config_chicagoCoaches.json
@@ -68,22 +68,28 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
+        "Bellarmine University",
         "California State University, Fresno",
         "Cornell University",
+        "Duke University",
         "Fordham University",
         "Illinois College",
         "Illinois State University",
         "Louisiana State University",
         "Loras College",
         "Loyola Marymount University",
+        "Macalester College",
         "Michigan State University",
         "Mississippi State University",
         "Santa Clara University",
+        "Southern Illinois University at Carbondale",
         "Southeast Missouri State University",
         "Southern Methodist University",
+        "Stanford University",
         "Texas Woman's University",
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
+        "University of North Carolina, Chapel Hill",
         "University of North Dakota",
         "University of Notre Dame",
         "Virginia Commonwealth University",
