--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -68,45 +68,56 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
-
-
         "Appalachian State University",
         "Boston College",
         "California State University, Fresno",
+        "Castleton University",
         "Eastern Connecticut State University",
         "Eastern Kentucky University",
+        "Eastern University",
         "Elon University",
         "Emerson College",
         "Florida State University",
+        "Hollins University",
         "Indian River State College",
         "Ithaca College",
         "Johns Hopkins University",
         "Long Island University",
         "Lourdes University",
+        "Louisiana State University",
         "Marshall University",
         "Miami University (OH)",
         "Mississippi State University",
         "Missouri University of Science and Technology",
         "University of Moravian",
+        "Morgan State University",
         "Mount Holyoke College",
+        "New Mexico State University",
         "North Carolina A&T State University",
         "Saint Joseph's College (ME)",
         "Skidmore College",
         "South Carolina State University",
+        "Morrisville State College",
         "Stonehill College",
+        "Texas Christian University",
         "University of Alabama",
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
+        "University of Massachusetts, Boston",
         "University of Nevada",
+        "University of New Haven",
         "University of Tampa",
         "University of the Cumberlands",
+        "University of Mary Washington",
         "University of Memphis",
         "University of New Hampshire",
         "University of North Florida",
+        "University of South Florida",
         "University of West Georgia",
         "Virginia Commonwealth University",
         "Wake Forest University",
         "Western Colorado University",
+        "Winthrop University",
         "#TBD",
         "#All"
     ],
