--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -69,7 +69,10 @@
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
         "Appalachian State University",
+        "Aurora University",
+        "Babson College",
         "Boston College",
+        "Butler University",
         "California State University, Fresno",
         "Castleton University",
         "Eastern Connecticut State University",
@@ -82,8 +85,10 @@
         "Indian River State College",
         "Ithaca College",
         "Johns Hopkins University",
+        "Lindsey Wilson College",
         "Long Island University",
         "Lourdes University",
+        "Lynn University",
         "Louisiana State University",
         "Marshall University",
         "Miami University (OH)",
@@ -103,6 +108,7 @@
         "University of Alabama",
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
+        "University of Connecticut",
         "University of Massachusetts, Boston",
         "University of Nevada",
         "University of New Haven",
@@ -116,8 +122,10 @@
         "University of West Georgia",
         "Virginia Commonwealth University",
         "Wake Forest University",
+        "Wells College",
         "Western Colorado University",
         "Winthrop University",
+        "Yale University",
         "#TBD",
         "#All"
     ],
