--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -68,6 +68,7 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
+        "#Adams State Univ.",
         "Appalachian State University",
         "Aurora University",
         "Babson College",
@@ -75,18 +76,24 @@
         "Butler University",
         "California State University, Fresno",
         "Castleton University",
+        "Clackamas Community College",
         "Eastern Connecticut State University",
+        "Creighton University",
         "Eastern Kentucky University",
         "Eastern University",
+        "Edward Waters University",
         "Elon University",
         "Emerson College",
+        "Flagler College",
         "Florida State University",
+        "Franklin & Marshall College",
         "Hollins University",
         "Indian River State College",
         "Ithaca College",
         "Johns Hopkins University",
         "Lindsey Wilson College",
         "Long Island University",
+        "Loras College",
         "Lourdes University",
         "Lynn University",
         "Louisiana State University",
@@ -94,24 +101,29 @@
         "Miami University (OH)",
         "Mississippi State University",
         "Missouri University of Science and Technology",
+        "Mitchell College",
         "University of Moravian",
         "Morgan State University",
         "Mount Holyoke College",
         "New Mexico State University",
+        "Neumann University",
         "North Carolina A&T State University",
         "Saint Joseph's College (ME)",
         "Skidmore College",
         "South Carolina State University",
+        "South Dakota School of Mines & Technology",
         "Morrisville State College",
         "Stonehill College",
         "Texas Christian University",
         "University of Alabama",
+        "University of California, Davis",
         "University of California, Los Angeles",
         "University of Colorado, Boulder",
         "University of Connecticut",
         "University of Massachusetts, Boston",
         "University of Nevada",
         "University of New Haven",
+        "University of South Carolina Upstate",
         "University of Tampa",
         "University of the Cumberlands",
         "University of Mary Washington",
@@ -122,6 +134,7 @@
         "University of West Georgia",
         "Virginia Commonwealth University",
         "Wake Forest University",
+        "Washington College (MD)",
         "Wells College",
         "Western Colorado University",
         "Winthrop University",
