--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -68,13 +68,18 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
-        "#Adams State Univ.",
+        "#Adams State University",
+        "Alverno College",
         "Appalachian State University",
         "Aurora University",
+        "Averett University",
         "Babson College",
+        "SUNY Binghamton",
         "Boston College",
         "Butler University",
+        "California Polytechnic State University",
         "California State University, Fresno",
+        "Canisius College",
         "Castleton University",
         "Clackamas Community College",
         "Eastern Connecticut State University",
@@ -87,51 +92,76 @@
         "Flagler College",
         "Florida State University",
         "Franklin & Marshall College",
+        "Gardner-Webb University",
+        "Georgia Southern University",
+        "Greensboro College",
         "Hollins University",
         "Indian River State College",
         "Ithaca College",
         "Johns Hopkins University",
+        "King University",
+        "Lehigh University",
+        "Lincoln Memorial University",
         "Lindsey Wilson College",
         "Long Island University",
         "Loras College",
         "Lourdes University",
         "Lynn University",
+        "Marquette University",
         "Louisiana State University",
         "Marshall University",
         "Miami University (OH)",
+        "Michigan State University",
         "Mississippi State University",
         "Missouri University of Science and Technology",
         "Mitchell College",
         "University of Moravian",
+        "Morehead State University",
         "Morgan State University",
         "Mount Holyoke College",
         "New Mexico State University",
         "Neumann University",
         "North Carolina A&T State University",
+        "North Carolina State University",
+        "Nova Southeastern University",
         "Saint Joseph's College (ME)",
         "Skidmore College",
         "South Carolina State University",
         "South Dakota School of Mines & Technology",
+        "Southern Connecticut State University",
+        "Spring Hill College",
         "Morrisville State College",
+        "Stevens Institute of Technology",
         "Stonehill College",
+        "Swarthmore College",
         "Texas Christian University",
         "University of Alabama",
+        "University of Alabama at Birmingham",
+        "University of Arkansas, Little Rock",
         "University of California, Davis",
         "University of California, Los Angeles",
+        "University of California, Santa Barbara",
         "University of Colorado, Boulder",
         "University of Connecticut",
+        "University of Georgia",
+        "University of Louisiana at Monroe",
         "University of Massachusetts, Boston",
+        "University of Massachusetts, Dartmouth",
+        "University of Missouri, Columbia",
         "University of Nevada",
         "University of New Haven",
         "University of South Carolina Upstate",
         "University of Tampa",
         "University of the Cumberlands",
+        "University of Wisconsin, Parkside",
         "University of Mary Washington",
         "University of Memphis",
         "University of New Hampshire",
         "University of North Florida",
         "University of South Florida",
+        "University of Virginia",
         "University of West Georgia",
+        "#Vanderbilt University",
         "Virginia Commonwealth University",
         "Wake Forest University",
         "Washington College (MD)",
