--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -69,11 +69,13 @@
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
         "#Adams State University",
+        "Allegheny College",
         "Alverno College",
         "Appalachian State University",
         "Aurora University",
         "Averett University",
         "Babson College",
+        "Bard College",
         "SUNY Binghamton",
         "Boston College",
         "Butler University",
@@ -83,15 +85,19 @@
         "Castleton University",
         "Clackamas Community College",
         "Eastern Connecticut State University",
+        "Connecticut College",
         "Creighton University",
         "Eastern Kentucky University",
         "Eastern University",
         "Edward Waters University",
         "Elon University",
         "Emerson College",
+        "Endicott College",
         "Flagler College",
         "Florida State University",
         "Franklin & Marshall College",
+        "Furman University",
+        "Garden City Community College",
         "Gardner-Webb University",
         "Georgia Southern University",
         "Greensboro College",
@@ -99,6 +105,7 @@
         "Indian River State College",
         "Ithaca College",
         "Johns Hopkins University",
+        "Lakeland University (WI)",
         "King University",
         "Lehigh University",
         "Lincoln Memorial University",
@@ -106,10 +113,12 @@
         "Long Island University",
         "Loras College",
         "Lourdes University",
+        "Marist College",
         "Lynn University",
         "Marquette University",
         "Louisiana State University",
         "Marshall University",
+        "Massachusetts College of Liberal Arts",
         "Miami University (OH)",
         "Michigan State University",
         "Mississippi State University",
@@ -123,18 +132,25 @@
         "Neumann University",
         "North Carolina A&T State University",
         "North Carolina State University",
+        "North Park University",
         "Nova Southeastern University",
+        "Saint Francis University (PA)",
         "Saint Joseph's College (ME)",
+        "Santa Clara University",
         "Skidmore College",
         "South Carolina State University",
         "South Dakota School of Mines & Technology",
         "Southern Connecticut State University",
         "Spring Hill College",
+        "St. Mary's College of Maryland",
         "Morrisville State College",
+        "SUNY Oswego",
         "Stevens Institute of Technology",
         "Stonehill College",
         "Swarthmore College",
         "Texas Christian University",
+        "Tufts University",
+        "University of Akron",
         "University of Alabama",
         "University of Alabama at Birmingham",
         "University of Arkansas, Little Rock",
@@ -162,9 +178,11 @@
         "University of Virginia",
         "University of West Georgia",
         "#Vanderbilt University",
+        "University of Wisconsin, Eau Claire",
         "Virginia Commonwealth University",
         "Wake Forest University",
         "Washington College (MD)",
+        "Washington State University",
         "Wells College",
         "Western Colorado University",
         "Winthrop University",
