--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -68,7 +68,7 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
-        "#Adams State University",
+        "Adams State University",
         "Allegheny College",
         "Alverno College",
         "Appalachian State University",
@@ -100,6 +100,7 @@
         "Garden City Community College",
         "Gardner-Webb University",
         "Georgia Southern University",
+        "Graceland University",
         "Greensboro College",
         "Hollins University",
         "Indian River State College",
@@ -177,7 +178,7 @@
         "University of South Florida",
         "University of Virginia",
         "University of West Georgia",
-        "#Vanderbilt University",
+        "Vanderbilt University",
         "University of Wisconsin, Eau Claire",
         "Virginia Commonwealth University",
         "Wake Forest University",
