--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -82,6 +82,7 @@
         "California Polytechnic State University",
         "California State University, Fresno",
         "Canisius College",
+        "Carroll University (WI)",
         "Castleton University",
         "Clackamas Community College",
         "Eastern Connecticut State University",
@@ -109,6 +110,7 @@
         "Lakeland University (WI)",
         "King University",
         "Lehigh University",
+        "Liberty University",
         "Lincoln Memorial University",
         "Lindsey Wilson College",
         "Long Island University",
@@ -138,6 +140,7 @@
         "Saint Francis University (PA)",
         "Saint Joseph's College (ME)",
         "Santa Clara University",
+        "Siena College",
         "Skidmore College",
         "South Carolina State University",
         "South Dakota School of Mines & Technology",
@@ -151,6 +154,7 @@
         "Swarthmore College",
         "Texas Christian University",
         "Tufts University",
+        "Union College (NY)",
         "University of Akron",
         "University of Alabama",
         "University of Alabama at Birmingham",
@@ -176,6 +180,7 @@
         "University of New Hampshire",
         "University of North Florida",
         "University of South Florida",
+        "Sewanee, The University of the South",
         "University of Virginia",
         "University of West Georgia",
         "Vanderbilt University",
