--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -71,6 +71,7 @@
         "Adams State University",
         "Allegheny College",
         "Alverno College",
+        "Amherst College",
         "Appalachian State University",
         "Aurora University",
         "Averett University",
@@ -85,14 +86,19 @@
         "Carroll University (WI)",
         "Castleton University",
         "Clackamas Community College",
+        "Coker University",
+        "College of Charleston (SC)",
         "Eastern Connecticut State University",
         "Connecticut College",
         "Creighton University",
+        "Daemen College",
         "Eastern Kentucky University",
         "Eastern University",
+        "Eastern Washington University",
         "Edward Waters University",
         "Elon University",
         "Emerson College",
+        "Emmanuel College (MA)",
         "Endicott College",
         "Flagler College",
         "Florida State University",
@@ -127,6 +133,7 @@
         "Mississippi State University",
         "Missouri University of Science and Technology",
         "Mitchell College",
+        "Monmouth College (IL)",
         "University of Moravian",
         "Morehead State University",
         "Morgan State University",
@@ -153,6 +160,7 @@
         "Stonehill College",
         "Swarthmore College",
         "Texas Christian University",
+        "Truett-McConnell College",
         "Tufts University",
         "Union College (NY)",
         "University of Akron",
@@ -166,6 +174,7 @@
         "University of Connecticut",
         "University of Georgia",
         "University of Louisiana at Monroe",
+        "University of Maryland, College Park",
         "University of Massachusetts, Boston",
         "University of Massachusetts, Dartmouth",
         "University of Missouri, Columbia",
@@ -186,11 +195,13 @@
         "Vanderbilt University",
         "University of Wisconsin, Eau Claire",
         "Virginia Commonwealth University",
+        "Virginia Polytechnic Institute & State University",
         "Wake Forest University",
         "Washington College (MD)",
         "Washington State University",
         "Wells College",
         "Western Colorado University",
+        "Western Michigan University",
         "Winthrop University",
         "Yale University",
         "#TBD",
