--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -87,17 +87,24 @@
         "Castleton University",
         "Clackamas Community College",
         "Coker University",
+        "Colby Community College",
         "College of Charleston (SC)",
         "Eastern Connecticut State University",
         "Connecticut College",
         "Creighton University",
+        "Drew University",
+        "Earlham College",
         "Daemen College",
         "Eastern Kentucky University",
         "Eastern University",
         "Eastern Washington University",
         "Edward Waters University",
+        "Elmhurst University",
+        "Elmira College",
         "Elon University",
+        "Embry-Riddle Aeronautical University",
         "Emerson College",
+        "Emmanuel College (GA)",
         "Emmanuel College (MA)",
         "Endicott College",
         "Flagler College",
@@ -107,6 +114,7 @@
         "Garden City Community College",
         "Gardner-Webb University",
         "Georgia Southern University",
+        "Georgia Institute of Technology",
         "Graceland University",
         "Greensboro College",
         "Hollins University",
@@ -138,6 +146,7 @@
         "Morehead State University",
         "Morgan State University",
         "Mount Holyoke College",
+        "United States Naval Academy",
         "New Mexico State University",
         "Neumann University",
         "North Carolina A&T State University",
@@ -146,6 +155,7 @@
         "Nova Southeastern University",
         "Saint Francis University (PA)",
         "Saint Joseph's College (ME)",
+        "Salve Regina University",
         "Santa Clara University",
         "Siena College",
         "Skidmore College",
@@ -160,6 +170,7 @@
         "Stonehill College",
         "Swarthmore College",
         "Texas Christian University",
+        "Towson University",
         "Truett-McConnell College",
         "Tufts University",
         "Union College (NY)",
