--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -69,6 +69,7 @@
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
         "Adams State University",
+        "Alice Lloyd College",
         "Allegheny College",
         "Alverno College",
         "Amherst College",
@@ -79,6 +80,7 @@
         "Bard College",
         "SUNY Binghamton",
         "Boston College",
+        "Bryn Mawr College",
         "Butler University",
         "California Polytechnic State University",
         "California State University, Fresno",
@@ -89,12 +91,15 @@
         "Coker University",
         "Colby Community College",
         "College of Charleston (SC)",
+        "Colorado College",
         "Eastern Connecticut State University",
         "Connecticut College",
         "Creighton University",
-        "Drew University",
-        "Earlham College",
         "Daemen College",
+        "Dartmouth College",
+        "Drew University",
+        "Duke University",
+        "Earlham College",
         "Eastern Kentucky University",
         "Eastern University",
         "Eastern Washington University",
@@ -108,6 +113,7 @@
         "Emmanuel College (MA)",
         "Endicott College",
         "Flagler College",
+        "Florida Atlantic University",
         "Florida State University",
         "Franklin & Marshall College",
         "Furman University",
@@ -115,6 +121,7 @@
         "Gardner-Webb University",
         "Georgia Southern University",
         "Georgia Institute of Technology",
+        "Goucher College",
         "Graceland University",
         "Greensboro College",
         "Hollins University",
@@ -127,6 +134,7 @@
         "Liberty University",
         "Lincoln Memorial University",
         "Lindsey Wilson College",
+        "Lock Haven University of Pennsylvania",
         "Long Island University",
         "Loras College",
         "Lourdes University",
@@ -151,12 +159,15 @@
         "Neumann University",
         "North Carolina A&T State University",
         "North Carolina State University",
+        "North Carolina Wesleyan College",
         "North Park University",
         "Nova Southeastern University",
         "Saint Francis University (PA)",
         "Saint Joseph's College (ME)",
         "Salve Regina University",
+        "San Jose State University",
         "Santa Clara University",
+        "Seton Hall University",
         "Siena College",
         "Skidmore College",
         "South Carolina State University",
@@ -183,11 +194,14 @@
         "University of California, Santa Barbara",
         "University of Colorado, Boulder",
         "University of Connecticut",
+        "University of Florida",
         "University of Georgia",
+        "University of Iowa",
         "University of Louisiana at Monroe",
         "University of Maryland, College Park",
         "University of Massachusetts, Boston",
         "University of Massachusetts, Dartmouth",
+        "University of Michigan",
         "University of Missouri, Columbia",
         "University of Nevada",
         "University of New Haven",
@@ -208,12 +222,15 @@
         "Virginia Commonwealth University",
         "Virginia Polytechnic Institute & State University",
         "Wake Forest University",
+        "Washington and Lee University",
         "Washington College (MD)",
         "Washington State University",
         "Wells College",
         "Western Colorado University",
         "Western Michigan University",
         "Winthrop University",
+        "Wisconsin Lutheran College",
+        "Worcester Polytechnic Institute",
         "Yale University",
         "#TBD",
         "#All"
