--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -74,20 +74,26 @@
         "Alverno College",
         "Amherst College",
         "Appalachian State University",
+        "Assumption College",
         "Aurora University",
+        "Austin Peay State University",
         "Averett University",
         "Babson College",
         "Bard College",
+        "Bethany College (WV)",
         "SUNY Binghamton",
         "Boston College",
+        "Bradley University",
         "Bryn Mawr College",
         "Butler University",
         "California Polytechnic State University",
         "California State University, Fresno",
         "Canisius College",
+        "Carnegie Mellon University",
         "Carroll University (WI)",
         "Castleton University",
         "Clackamas Community College",
+        "Clarkson University",
         "Coker University",
         "Colby Community College",
         "College of Charleston (SC)",
@@ -96,6 +102,7 @@
         "Connecticut College",
         "Creighton University",
         "Daemen College",
+        "Dallas Baptist University",
         "Dartmouth College",
         "Drew University",
         "Duke University",
@@ -114,6 +121,8 @@
         "Endicott College",
         "Flagler College",
         "Florida Atlantic University",
+        "Florida Institute of Technology",
+        "Florida International University",
         "Florida State University",
         "Franklin & Marshall College",
         "Furman University",
@@ -123,6 +132,7 @@
         "Georgia Institute of Technology",
         "Goucher College",
         "Graceland University",
+        "Grand Canyon University",
         "Greensboro College",
         "Hollins University",
         "Indian River State College",
@@ -140,10 +150,12 @@
         "Lourdes University",
         "Marist College",
         "Lynn University",
+        "Macalester College",
         "Marquette University",
         "Louisiana State University",
         "Marshall University",
         "Massachusetts College of Liberal Arts",
+        "McKendree University",
         "Miami University (OH)",
         "Michigan State University",
         "Mississippi State University",
@@ -162,25 +174,34 @@
         "North Carolina Wesleyan College",
         "North Park University",
         "Nova Southeastern University",
+        "Point Loma Nazarene University",
+        "Roosevelt University",
+        "St. Ambrose University",
         "Saint Francis University (PA)",
         "Saint Joseph's College (ME)",
         "Salve Regina University",
         "San Jose State University",
         "Santa Clara University",
+        "Sarah Lawrence College",
         "Seton Hall University",
         "Siena College",
         "Skidmore College",
         "South Carolina State University",
         "South Dakota School of Mines & Technology",
         "Southern Connecticut State University",
+        "Southern Methodist University",
         "Spring Hill College",
+        "Springfield College",
         "St. Mary's College of Maryland",
+        "##Stanton University",
         "Morrisville State College",
         "SUNY Oswego",
         "Stevens Institute of Technology",
         "Stonehill College",
+        "Stony Brook University",
         "Swarthmore College",
         "Texas Christian University",
+        "University of Tennessee, Knoxville",
         "Towson University",
         "Truett-McConnell College",
         "Tufts University",
@@ -209,6 +230,7 @@
         "University of Tampa",
         "University of the Cumberlands",
         "University of Wisconsin, Parkside",
+        "University of Central Florida",
         "University of Mary Washington",
         "University of Memphis",
         "University of New Hampshire",
@@ -228,6 +250,7 @@
         "Wells College",
         "Western Colorado University",
         "Western Michigan University",
+        "Wheaton College (IL)",
         "Winthrop University",
         "Wisconsin Lutheran College",
         "Worcester Polytechnic Institute",
