--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -74,6 +74,7 @@
         "Alverno College",
         "Amherst College",
         "Appalachian State University",
+        "Arkansas State University",
         "Assumption College",
         "Aurora University",
         "Austin Peay State University",
@@ -135,7 +136,11 @@
         "Grand Canyon University",
         "Greensboro College",
         "Hollins University",
+        "Holy Family University",
+        "Illinois College",
         "Indian River State College",
+        "Indiana University, Bloomington",
+        "Iowa State University",
         "Ithaca College",
         "Johns Hopkins University",
         "Lakeland University (WI)",
@@ -174,8 +179,11 @@
         "North Carolina Wesleyan College",
         "North Park University",
         "Nova Southeastern University",
+        "Pennsylvania State University",
         "Point Loma Nazarene University",
+        "Presbyterian College",
         "Roosevelt University",
+        "Rowan University",
         "St. Ambrose University",
         "Saint Francis University (PA)",
         "Saint Joseph's College (ME)",
@@ -192,6 +200,7 @@
         "Southern Methodist University",
         "Spring Hill College",
         "Springfield College",
+        "St. Johns River State College",
         "St. Mary's College of Maryland",
         "##Stanton University",
         "Morrisville State College",
@@ -201,8 +210,11 @@
         "Stony Brook University",
         "Swarthmore College",
         "Texas Christian University",
+        "Texas Tech University",
+        "The Citadel",
         "University of Tennessee, Knoxville",
         "Towson University",
+        "Trinity College (CT)",
         "Truett-McConnell College",
         "Tufts University",
         "Union College (NY)",
@@ -224,18 +236,28 @@
         "University of Massachusetts, Dartmouth",
         "University of Michigan",
         "University of Missouri, Columbia",
+        "University of Nebraska, Lincoln",
+        "University of Nevada, Las Vegas",
         "University of Nevada",
         "University of New Haven",
         "University of South Carolina Upstate",
+        "University of St. Thomas (MN)",
         "University of Tampa",
         "University of the Cumberlands",
+        "University of Washington",
+        "University of West Alabama",
         "University of Wisconsin, Parkside",
+        "University at Albany",
         "University of Central Florida",
+        "University of Houston",
         "University of Mary Washington",
         "University of Memphis",
+        "University of Miami (FL)",
         "University of New Hampshire",
         "University of North Florida",
+        "University of Notre Dame",
         "University of South Florida",
+        "University of Texas at Austin",
         "Sewanee, The University of the South",
         "University of Virginia",
         "University of West Georgia",
