--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -135,6 +135,7 @@
         "Graceland University",
         "Grand Canyon University",
         "Greensboro College",
+        "High Point University",
         "Hollins University",
         "Holy Family University",
         "Illinois College",
@@ -144,6 +145,7 @@
         "Ithaca College",
         "Johns Hopkins University",
         "Lakeland University (WI)",
+        "Lamar University",
         "King University",
         "Lehigh University",
         "Liberty University",
@@ -182,6 +184,7 @@
         "Pennsylvania State University",
         "Point Loma Nazarene University",
         "Presbyterian College",
+        "Quincy University",
         "Roosevelt University",
         "Rowan University",
         "St. Ambrose University",
@@ -240,6 +243,7 @@
         "University of Nevada, Las Vegas",
         "University of Nevada",
         "University of New Haven",
+        "University of South Carolina-Sumter",
         "University of South Carolina Upstate",
         "University of St. Thomas (MN)",
         "University of Tampa",
@@ -269,7 +273,9 @@
         "Washington and Lee University",
         "Washington College (MD)",
         "Washington State University",
+        "Webber International University",
         "Wells College",
+        "Wesleyan University (CT)",
         "Western Colorado University",
         "Western Michigan University",
         "Wheaton College (IL)",
